# ml

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/clus/: CMakeLists.txt  clus.h  forel.h
core/clus/src/: clus.cpp  forel.cpp  forel_go.cpp
core/gene/: CMakeLists.txt  gene.h
core/gene/src/: gene.cpp  gene_go.cpp
core/nn/: CMakeLists.txt  layers.h  nn.h  optimizer.h
core/nn/src/: layers.cpp  nn.cpp  nn_go.cpp  optimizer.cpp  som_go.cpp
core/utils/: CMakeLists.txt  data.h  initializer.h  metric.h  utils.h
core/utils/src/: data.cpp  initializer.cpp  metric.cpp  utils.cpp
scripts/: draw_clus.py  generate_data.py
testdata/: 3c_5d_150p_distinct.csv  4c_4d_100p_2int-groups.csv  4c_4d_100p_interleaved.csv  fisher.csv
